Add CloudFront invalidation slash command

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -896,6 +896,16 @@ Resources:
                   - "sns:Publish"
                 Resource:
                   - !Ref SlackMessageRelaySnsTopic
+        - PolicyName: CloudFrontPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cloudfront:ListDistributions"
+                  - "cloudfront:CreateInvalidation"
+                Resource:
+                  - "*"
         - PolicyName: CodePipelineApprovalPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -986,6 +996,7 @@ Resources:
       Environment:
         Variables:
           SLACK_SIGNING_SECRET: !Ref IkeSlackSigningSecret
+          SLACK_ACCESS_TOKEN: !Ref IkeOauthAccessToken
           INFRASTRUCTURE_CONFIG_BUCKET:
             Fn::ImportValue:
               !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
