Add publicfeed domain for Wrongful Convication

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -38,3 +38,6 @@ Resources:
         # Add more records here…
         - { Type: A,    Name: !Sub "pf123xyz.${Domain}", AliasTarget: { DNSName: "d123456789abc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf123xyz.${Domain}", AliasTarget: { DNSName: "d123456789abc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf4abe8aie19.${Domain}", AliasTarget: { DNSName: "d4taugigavcar.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf4abe8aie19.${Domain}", AliasTarget: { DNSName: "d4taugigavcar.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
