Improve single origin template parameters
These were some of the changes made in the dettached certificate branch that hasn't been merged

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -116,20 +116,29 @@ Metadata:
 Parameters:
   ProjectTag:
     Type: String
+    AllowedPattern: ^.+$
+    ConstraintDescription: must not be blank
     Description: >
       The value used for the Project tag on resources that support tagging.
   Cnames:
     Type: CommaDelimitedList
     Description: >
-      The CNAMEs (alternate domain names) for the distribution, as a
+      (optional) The CNAMEs (alternate domain names) for the distribution, as a
       comma-delimited list (e.g. "cdn1.example.com,cdn2.example.com")
   OriginDomain:
     Type: String
+    AllowedPattern: ^.+\.[a-zA-Z]+$
+    ConstraintDescription: >
+      must be a hostname or of the format mybucket.s3.amazonaws.com
     Description: >
       The DNS name of the Amazon Simple Storage Service (S3) bucket or the HTTP
       server from which you want CloudFront to get objects for this origin.
+      (e.g. "example.com" or "mybucket.s3.amazonaws.com")
   OriginPath:
     Type: String
+    AllowedPattern: ^$|^\/..+(?<!\/)$
+    ConstraintDescription: >
+      must start with a slash and must not end with a slash
     Description: >
       (optional) The path that CloudFront uses to request content from an S3
       bucket or custom origin. The combination of the DomainName and OriginPath
@@ -137,34 +146,39 @@ Parameters:
       mark (/) and cannot end with a slash mark.
   CloudFrontLoggingBucket:
     Type: String
-    Default: xyz.s3.amazonaws.com
+    AllowedPattern: ^$|^.+\.s3\.amazonaws\.com$
+    ConstraintDescription: >
+      must be of the format mybucket.s3.amazonaws.com
     Description: >
-      The Amazon S3 bucket address where access logs are stored for CloudFront.
-      (e.g., mybucket.s3.amazonaws.com)
+      (optional) The Amazon S3 bucket address where access logs are stored for
+      CloudFront. (e.g., mybucket.s3.amazonaws.com)
   CloudFrontLoggingBucketPrefix:
     Type: String
     Description: >
       (optional) A prefix for the access log file names for the CloudFront
-      distribution.
+      distribution. (e.g., myprefix/)
   CloudFrontComment:
     Type: String
+    AllowedPattern: ^.+$
+    ConstraintDescription: must not be blank
     Description: >
       Any comments that you want to include about the CloudFront distribution
     MaxLength: 128
   CloudFrontMinTtl:
     Type: String
     Description: >
-      The minimum amount of time that you want objects to stay in CloudFront
-      caches before CloudFront forwards another request to your origin to
-      determine whether the object has been updated.
+      (optional) The minimum amount of time that you want objects to stay in
+      CloudFront caches before CloudFront forwards another request to your
+      origin to determine whether the object has been updated.
   CloudFrontMaxTtl:
     Type: String
     Description: >
-      The maximum amount of time, in seconds, that you want objects to stay in
-      CloudFront caches before CloudFront forwards another request to your
-      origin to determine whether the object has been updated. The value that
-      you specify applies only when your origin adds HTTP headers such as
-      Cache-Control max-age, Cache-Control s-maxage, and Expires to objects
+      (optional) The maximum amount of time, in seconds, that you want objects
+      to stay in CloudFront caches before CloudFront forwards another request
+      to your origin to determine whether the object has been updated. The
+      value that you specify applies only when your origin adds HTTP headers
+      such as Cache-Control max-age, Cache-Control s-maxage, and Expires to
+      objects
   CloudFrontPriceClass:
     Type: String
     Description: >
@@ -233,20 +247,22 @@ Parameters:
   CloudFrontCustom403ErrorResponseCode:
     Type: String
     Description: >
-      A custom HTTP resonse code to return when a 403 is returned by the origin
+      (optional) A custom HTTP response code to return when a 403 is returned
+      by the origin
   CloudFrontCustom403ErrorResponsePagePath:
     Type: String
     Description: >
-      A custom page to return when a 403 is returned by the origin
+      (optional) A custom page to return when a 403 is returned by the origin
   CloudFrontWebACLId:
     Type: String
     Description: >
-      The AWS WAF web ACL to associate with this distribution
+      (optional) The AWS WAF web ACL to associate with this distribution
   AcmCertificateArn:
     Type: String
     Description: >
-      ARN for the ACM certificate that will be used with the CloudFront
-      distribution. If no value is supplied, a new certificate will be created.
+      (optional) ARN for the ACM certificate that will be used with the
+      CloudFront distribution. If no value is supplied, a new certificate will
+      be created.
 Resources:
   # ACM Certificate
   # This gets created when no ARN for a pre-existing certificate is provided
