--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -145,6 +145,7 @@ Resources:
         KinesisIn: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_IN"
         KinesisOut: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_OUT"
         Kinesis404: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_404"
+        RedisBackupUrl: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/REDIS_BACKUP_URL"
         RedisUrl: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/REDIS_URL"
         S3Bucket: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/S3_BUCKET"
         S3Prefix: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/S3_PREFIX"
