--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -1,8 +1,8 @@
 # stacks/serverless/dovetail-counts-lambda.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Dovetail counts lambda function
-Conditions:
-  HasRedisBackupUrl: !Not [!Equals [!Ref RedisBackupUrl, ""]]
+# Conditions:
+#   HasRedisBackupUrl: !Not [!Equals [!Ref RedisBackupUrl, ""]]
 Parameters:
   OpsWarnMessagesSnsTopicArn:
     Type: String
@@ -30,8 +30,8 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
   Kinesis404:
     Type: AWS::SSM::Parameter::Value<String>
-  RedisBackupUrl:
-    Type: AWS::SSM::Parameter::Value<String>
+  # RedisBackupUrl:
+  #   Type: AWS::SSM::Parameter::Value<String>
   RedisUrl:
     Type: AWS::SSM::Parameter::Value<String>
   S3Bucket:
@@ -90,7 +90,7 @@ Resources:
         Variables:
           KINESIS_ARRANGEMENT_STREAM: !Ref Kinesis404
           KINESIS_IMPRESSION_STREAM: !Ref KinesisOut
-          REDIS_BACKUP_URL: !If [HasRedisBackupUrl, !Ref RedisBackupUrl, !Ref "AWS::NoValue"]
+          # REDIS_BACKUP_URL: !If [HasRedisBackupUrl, !Ref RedisBackupUrl, !Ref "AWS::NoValue"]
           REDIS_URL: !Ref RedisUrl
           S3_BUCKET: !Ref S3Bucket
           S3_PREFIX: !Ref S3Prefix
