Add publicfeed domain for Number in the News

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -41,3 +41,6 @@ Resources:
 
         - { Type: A,    Name: !Sub "pf4abe8aie19.${Domain}", AliasTarget: { DNSName: "d4taugigavcar.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf4abe8aie19.${Domain}", AliasTarget: { DNSName: "d4taugigavcar.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
