Upgrade buildspec for runtimes

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,11 @@
-version: 0.2
+version: 0.3
 env:
   variables:
     PRX_NULL: "null"
 phases:
   install:
+    runtime-versions:
+      python: 3.7
     commands:
       - 'curl -s https://bootstrap.pypa.io/get-pip.py | python'
       - 'echo "Installing CloudFormation Linter"'
