--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -214,7 +214,7 @@ Resources:
             Value:
               Fn::ImportValue:
                 !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
-        Image: "aws/codebuild/docker:17.09.0"
+        Image: "aws/codebuild/amazonlinux2-x86_64-standard:1.0"
         Type: LINUX_CONTAINER
       # NOTE If Name changes, the CodeBuild Role Logs policy also must change
       Name: !Sub ${AWS::StackName}-Runner2
