Enable Priviledge mode in CI builds
This has already been deployed. It's required for Docker-in-Docker builds

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -215,6 +215,7 @@ Resources:
               Fn::ImportValue:
                 !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         Image: "aws/codebuild/amazonlinux2-x86_64-standard:1.0"
+        PrivilegedMode: true
         Type: LINUX_CONTAINER
       # NOTE If Name changes, the CodeBuild Role Logs policy also must change
       Name: !Sub ${AWS::StackName}-Runner2
