--- a/stacks/serverless/porter.yml
+++ b/stacks/serverless/porter.yml
@@ -1,6 +1,6 @@
-# stacks/serverless/rexif.yml
+# stacks/serverless/porter.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Rexif prototype
+Description: AWS Step Function and other resources used by Porter
 Resources:
   # VPC
   VPC:
@@ -12,7 +12,7 @@ Resources:
       InstanceTenancy: default
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-VPC
         - Key: prx:cloudformation:stack-name
@@ -25,7 +25,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-RouteTable
         - Key: prx:cloudformation:stack-name
@@ -52,7 +52,7 @@ Resources:
           ToPort: 443
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-EcsEndpointsSecurityGroup
         - Key: prx:cloudformation:stack-name
@@ -95,7 +95,7 @@ Resources:
       CidrBlock: 10.0.0.0/17
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-Subnet-1
         - Key: prx:cloudformation:stack-name
@@ -113,7 +113,7 @@ Resources:
       CidrBlock: 10.0.128.0/17
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-Subnet-2
         - Key: prx:cloudformation:stack-name
@@ -136,7 +136,7 @@ Resources:
     Properties:
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-NetworkAcl
         - Key: prx:cloudformation:stack-name
@@ -181,7 +181,7 @@ Resources:
         - AmazonProvidedDNS
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: Name
           Value: !Sub ${AWS::StackName}-DhcpOptions
         - Key: prx:cloudformation:stack-name
@@ -199,7 +199,7 @@ Resources:
     Properties:
       Tags:
         - Key: Project
-          Value: Rexif
+          Value: Porter
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
