--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -339,7 +339,7 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "pixel.prx.org.yml"]]
       TimeoutInMinutes: 15
-  RexifStack:
+  PorterStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       Tags:
@@ -347,5 +347,5 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "rexif.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "porter.yml"]]
       TimeoutInMinutes: 15
