Fix target groups names to web and sphinx, use correctly

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -97,7 +97,7 @@ Resources:
       Protocol: TCP
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref NLBTargetGroup
+          TargetGroupArn: !Ref NLBSphinxTargetGroup
   NLBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -106,7 +106,7 @@ Resources:
       Protocol: TCP
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref NLBTargetGroup
+          TargetGroupArn: !Ref NLBWebTargetGroup
   NLBHTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -118,8 +118,8 @@ Resources:
       SslPolicy: "ELBSecurityPolicy-2016-08"
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref NLBTargetGroup
-  NLBTargetGroup:
+          TargetGroupArn: !Ref NLBWebTargetGroup
+  NLBWebTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     DependsOn: NLB
     Properties:
@@ -310,7 +310,7 @@ Resources:
       LoadBalancers:
         - ContainerName: !Sub ${AppName}-web
           ContainerPort: !Ref ContainerPort
-          TargetGroupArn: !Ref NLBTargetGroup
+          TargetGroupArn: !Ref NLBWebTargetGroup
         - ContainerName: !Sub ${AppName}-web
           ContainerPort: 9312
           TargetGroupArn: !Ref NLBSphinxTargetGroup
