Init dovetail elixir configs

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -72,6 +72,10 @@ Parameters:
     Type: String
   DovetailSecretsVersion:
     Type: String
+  DovetailElixirEcrImageTag:
+    Type: String
+  DovetailElixirSecretsVersion:
+    Type: String
   ExchangeEcrImageTag:
     Type: String
   ExchangeSecretsVersion:
@@ -721,6 +725,8 @@ Resources:
             !Sub "${SecretsStackName}-SecretsBaseRegion"
         DovetailEcrImageTag: !Ref DovetailEcrImageTag
         DovetailSecretsVersion: !Ref DovetailSecretsVersion
+        DovetailElixirEcrImageTag: !Ref DovetailElixirEcrImageTag
+        DovetailElixirSecretsVersion: !Ref DovetailElixirSecretsVersion
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailMemory]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailCpu]
       Tags:
