--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -51,6 +51,11 @@ Parameters:
     Type: String
   DovetailSecretsVersion:
     Type: String
+  # Dovetail Elixir ############################################################
+  DovetailEcrImageTag:
+    Type: String
+  DovetailSecretsVersion:
+    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -289,7 +294,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !GetAtt DovetailServiceDesiredCountRolloverResource.DesiredCount
+      DesiredCount: 10
       LoadBalancers:
         - ContainerName: "dovetail-express"
           ContainerPort: 8080
@@ -350,72 +355,6 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-  # Config Persistence
-  DovetailServiceDesiredCountRolloverIamRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service:
-                - "lambda.amazonaws.com"
-            Action:
-              - "sts:AssumeRole"
-      Path: "/"
-      Policies:
-        - PolicyName: EcsServicesPolicy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "ecs:DescribeServices"
-                Resource:
-                  - "*"
-                  # - !Sub ${AWS::StackName}-DovetailService TODO
-      ManagedPolicyArns:
-        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
-      Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  DovetailServiceDesiredCountRolloverLambdaFunction:
-    Type: "AWS::Lambda::Function"
-    Properties:
-      Code:
-        S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: utility/ecs-service-size-rollover.zip
-      Description: Allows for DesiredCount persistence on ECS services
-      Environment:
-        Variables:
-          DEFAULT_DESIRED_COUNT: "2"
-      Handler: index.handler
-      MemorySize: 128
-      Role: !GetAtt DovetailServiceDesiredCountRolloverIamRole.Arn
-      Runtime: nodejs8.10
-      Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      Timeout: 8
-  DovetailServiceDesiredCountRolloverResource:
-    Type: "Custom::EcsServiceSizeRollover"
-    Version: "1.0"
-    Properties:
-      ClusterName: !Ref ECSCluster
-      Rotation: !Ref PipelineExecutionNonce
-      ServiceName: !Sub ${AWS::StackName}-DovetailApp
-      ServiceToken: !GetAtt DovetailServiceDesiredCountRolloverLambdaFunction.Arn
   # Autoscaling
   DovetailAutoScaling:
     Type: "AWS::ApplicationAutoScaling::ScalableTarget"
