--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -295,43 +295,43 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-  WebService:
-    Type: "AWS::ECS::Service"
-    DependsOn:
-      - NLBSphinxListener
-      - NLBHTTPListener
-      - NLBHTTPSListener
-    Properties:
-      Cluster: !Ref ECSCluster
-      DeploymentConfiguration:
-        MaximumPercent: 200
-        MinimumHealthyPercent: 50
-      DesiredCount: !If [CreateProductionResources, !Ref DesiredWebsProduction, !Ref DesiredWebs]
-      LoadBalancers:
-        - ContainerName: !Sub ${AppName}-web
-          ContainerPort: !Ref ContainerPort
-          TargetGroupArn: !Ref NLBWebTargetGroup
-        - ContainerName: !Sub ${AppName}-web
-          ContainerPort: 9312
-          TargetGroupArn: !Ref NLBSphinxTargetGroup
-      Role: !Ref ECSServiceIAMRole
-      NetworkConfiguration:
-        AwsvpcConfiguration:
-          AssignPublicIp: DISABLED
-          Subnets:
-            - !Ref VPCSubnet1
-            - !Ref VPCSubnet2
-            - !Ref VPCSubnet3
-      Tags:
-        - Key: Project
-          Value: !Ref AppName
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      TaskDefinition: !Ref WebTaskDefinition
+  # WebService:
+  #   Type: "AWS::ECS::Service"
+  #   DependsOn:
+  #     - NLBSphinxListener
+  #     - NLBHTTPListener
+  #     - NLBHTTPSListener
+  #   Properties:
+  #     Cluster: !Ref ECSCluster
+  #     DeploymentConfiguration:
+  #       MaximumPercent: 200
+  #       MinimumHealthyPercent: 50
+  #     DesiredCount: !If [CreateProductionResources, !Ref DesiredWebsProduction, !Ref DesiredWebs]
+  #     LoadBalancers:
+  #       - ContainerName: !Sub ${AppName}-web
+  #         ContainerPort: !Ref ContainerPort
+  #         TargetGroupArn: !Ref NLBWebTargetGroup
+  #       - ContainerName: !Sub ${AppName}-web
+  #         ContainerPort: 9312
+  #         TargetGroupArn: !Ref NLBSphinxTargetGroup
+  #     Role: !Ref ECSServiceIAMRole
+  #     NetworkConfiguration:
+  #       AwsvpcConfiguration:
+  #         AssignPublicIp: DISABLED
+  #         Subnets:
+  #           - !Ref VPCSubnet1
+  #           - !Ref VPCSubnet2
+  #           - !Ref VPCSubnet3
+  #     Tags:
+  #       - Key: Project
+  #         Value: !Ref AppName
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  #     TaskDefinition: !Ref WebTaskDefinition
   # Route 53
   WebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
