Clean up CI IAM role
Removes the hard coded log group name permissions

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -106,24 +106,6 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
-        - PolicyName: CodeBuildLogs
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "logs:CreateLogGroup"
-                  - "logs:CreateLogStream"
-                  - "logs:PutLogEvents"
-                Resource:
-                  # NOTE The project name in this ARN must stay in sync with the
-                  # actual project name, but can't be referenced because of
-                  # a circular dep.
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Runner
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Runner:*
-                  # TODO Cleanup after removing legacy project
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Runner2
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Runner2:*
         - PolicyName: CiCodeBuildSourceArchiveBucketBasicAccess
           PolicyDocument:
             Version: "2012-10-17"
@@ -194,6 +176,23 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+  CiCodeBuildLogsIamPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action:
+              - logs:CreateLogGroup
+              - logs:CreateLogStream
+              - logs:PutLogEvents
+            Effect: Allow
+            Resource:
+              - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${CiCodeBuildProject}
+              - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${CiCodeBuildProject}:*
+      PolicyName: !Sub ${AWS::StackName}-CiCodeBuildLogsIamPolicy
+      Roles:
+        - !Ref CodeBuildIAMRole
   CiCodeBuildProject:
     Type: "AWS::CodeBuild::Project"
     Properties:
