Rename CodeBuild IAM role

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -92,7 +92,7 @@ Resources:
           Value: !Ref AWS::StackId
       VersioningConfiguration:
         Status: Enabled
-  CodeBuildIAMRole:
+  CiCodeBuildIamRole:
     Type: "AWS::IAM::Role"
     Properties:
       AssumeRolePolicyDocument:
@@ -192,7 +192,7 @@ Resources:
               - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${CiCodeBuildProject}:*
       PolicyName: !Sub ${AWS::StackName}-CiCodeBuildLogsIamPolicy
       Roles:
-        - !Ref CodeBuildIAMRole
+        - !Ref CiCodeBuildIamRole
   CiCodeBuildProject:
     Type: "AWS::CodeBuild::Project"
     Properties:
@@ -218,7 +218,7 @@ Resources:
         Type: LINUX_CONTAINER
       # NOTE If Name changes, the CodeBuild Role Logs policy also must change
       Name: !Sub ${AWS::StackName}-Runner2
-      ServiceRole: !GetAtt CodeBuildIAMRole.Arn
+      ServiceRole: !GetAtt CiCodeBuildIamRole.Arn
       Source:
         Location: !Join ["", ["arn:aws:s3:::", !Ref CiCodeBuildSourceArchiveBucket, "/", !FindInMap [Shared, SourceArchives, Key]]]
         Type: S3
