Add sourcevpc back in

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -286,6 +286,10 @@ Resources:
                   - ecr:BatchGetImage
                 Resource:
                   - "*"
+                Condition:
+                  StringEquals:
+                    # aws:sourceVpce: !Ref EcrVpcEndpoint
+                    aws:sourceVpc: !Ref VPC
       Tags:
         - Key: Project
           Value: !Ref AppName
