--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -72,9 +72,9 @@ Parameters:
     Type: String
   DovetailSecretsVersion:
     Type: String
-  DovetailElixirEcrImageTag:
+  Dovetail3EcrImageTag:
     Type: String
-  DovetailElixirSecretsVersion:
+  Dovetail3SecretsVersion:
     Type: String
   ExchangeEcrImageTag:
     Type: String
@@ -725,8 +725,8 @@ Resources:
             !Sub "${SecretsStackName}-SecretsBaseRegion"
         DovetailEcrImageTag: !Ref DovetailEcrImageTag
         DovetailSecretsVersion: !Ref DovetailSecretsVersion
-        DovetailElixirEcrImageTag: !Ref DovetailElixirEcrImageTag
-        DovetailElixirSecretsVersion: !Ref DovetailElixirSecretsVersion
+        Dovetail3EcrImageTag: !Ref Dovetail3EcrImageTag
+        Dovetail3SecretsVersion: !Ref Dovetail3SecretsVersion
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailMemory]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailCpu]
       Tags:
