--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -425,7 +425,7 @@ Resources:
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
       HealthCheckPath: /
-      Name: !Sub dovetail-elixir-${EnvironmentTypeAbbreviation}-${VPC}
+      Name: !Sub dovetail3-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
       TargetGroupAttributes:
