--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -498,6 +498,8 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: 4000
+          Command:
+            - web
       Tags:
         - Key: Project
           Value: Dovetail
